--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,15 @@
     "license": "MIT",
     "description": "",
     "authors": [
+      {
+        "name": "Hans-Jürgen Gessinger",
+        "email": "gessinger-hj@gmail.com"
+      },
+      {
+        "name": "Paul Gessinger",
+        "email": "hello@paulgessinger.com",
+        "homepage": "https://paulgessinger.com"
+      }
     ],
     "require": {
         "hampel/json": "^2.3"
