--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "hampel/json": "^2.3"
     },
     "require-dev": {
+        "php-mock/php-mock-phpunit": "^1.1",
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-4": {
