--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "php-mock/php-mock-phpunit": "^1.1",
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "codeception/aspect-mock": "^1.0" 
     },
     "autoload": {
         "psr-4": {
