--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
       }
     ],
     "require": {
-        "hampel/json": "^2.3"
+        "hampel/json": "^2.3",
+        "clue/socket-raw": "^1.2"
     },
     "require-dev": {
         "php-mock/php-mock-phpunit": "^1.1",
