--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
       {
         "name": "Hans-Jürgen Gessinger",
-        "email": "gessinger-hj@gmail.com"
+        "email": "gessinger.hj@gmail.com"
       },
       {
         "name": "Paul Gessinger",
