--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "gepard/gepard-php",
     "type": "library",
     "license": "MIT",
-    "description": "",
+    "description": "PHP client for gepard:General purpose communications for distributed applications / Microservices / events, semaphores and messages for JavaScript, Java, Python and PHP",
+    "version":"1.0.2"
     "authors": [
       {
         "name": "Hans-Jürgen Gessinger",
