--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "license": "MIT",
     "description": "PHP client for gepard:General purpose communications for distributed applications / Microservices / events, semaphores and messages for JavaScript, Java, Python and PHP",
-    "version":"1.0.2"
+    "version":"1.0.2",
     "authors": [
       {
         "name": "Hans-Jürgen Gessinger",
